# AGI-Stack-Unchained

./: .gitattributes  .gitignore  .gitignore.local_experiment  .gitmodules  AGENTS.md  AGI_Stack_Complete_Repository_Report.md  AGI_Stack_Gap_Analysis_to_AGI_ASI.md  CCAP_and_SH1_Technical_Deep_Dive.md  CI_FULL_GREEN_SUMMARY_v1.json  Directive.md  EUDRS-U v1.0 + QXWMR v1.0 + QXWMR v2 (MCL) — Repo-Anchored Implementation Specification.md  LONG_RUN_PREFLIGHT_SUMMARY_v1.json  MISSION_CONTROL_PHASES_1_2_3_HANDOFF_2026-02-26.md  OMEGA_POLYMATH_REFINERY_PROPOSER_SUMMARY_v1.json  QXRL v1.0 — Quantized eXact Replay Learning Substrate.md  README.md  README_UPDATE_PROGRESS.md  SOURCE_OF_TRUTH.md  conftest.py  debugging_1.md  ignite_runaway.sh  master_debug.md  pytest.ini  test_native_module_pipeline_v0_1.py  test_orchestrator_bid_market_parity_v1.py  test_phase3_mutator_gates_v1.py  test_v19_axis_gate_ccap_effective_touched_paths.py  test_v19_axis_gate_propagation.py  test_v19_gate_matrix_e2e.py  test_v19_ladder_evidence_pipeline_v1.py  test_v19_ladder_harness.py  test_v19_phase1_native_modules_pack_e2e.py  test_v19_phase3_pack_wiring_smoke.py  test_v19_predation_market_e2e_determinism.py  test_v19_promotion_cwd_subrun_required.py  test_v19_real_run_uses_subrun_cwd.py  test_v19_tick_gate_matrix_e2e.py  test_v19_tier2_determinism.py  test_v19_wiring_smoke.py  test_vision_stage0_e2e.py  (+6 more)
Extension-1/CDEL/: .gitignore  README.md  pyproject.toml
agi-orchestrator/: .gitignore  README.md  pyproject.toml
agi-orchestrator/.github/: README.md
agi-orchestrator/concepts/: README.md  registry.jsonl
agi-orchestrator/configs/: README.md  sealed_agent_reliability_dev.toml  sealed_agent_reliability_heldout.toml  sealed_env_dev.toml  sealed_env_hard_dev.toml  sealed_env_hard_heldout.toml  sealed_env_heldout.toml  sealed_env_safety_heldout.toml  sealed_io_dev.toml  sealed_io_heldout.toml  sealed_pyut_dev.toml  sealed_pyut_heldout.toml  sealed_pyut_transfer_dev.toml  sealed_pyut_transfer_heldout.toml  sealed_tooluse_dev.toml  sealed_tooluse_heldout.toml  sealed_tooluse_safety_heldout.toml
agi-orchestrator/constraints/: README.md  env_constraint_spec_v1.json  tooluse_constraint_spec_v1.json
agi-orchestrator/docs/: README.md  suite_growth_and_rotation.md
agi-orchestrator/orchestrator/: README.md  __init__.py  agent_controller.py  agent_policy.py  agent_transcript.py  cdel_client.py  concept_registry.py  context_pack.py  counterexamples.py  embedding.py  heldout_rotation.py  ledger_view.py  llm_backend.py  llm_backend_replay.py  llm_cache.py  llm_call_log.py  llm_limits.py  metrics.py  plan_skill.py  plan_skill_store.py  promote.py  pyut_utils.py  ranking.py  retrieval.py  rsi_daemon_v6_0.py  rsi_daemon_v7_0.py  rsi_daemon_v8_0_math.py  rsi_sas_math_v11_0.py  run.py  run_alignment_v7_0.py  smoke_config.py  spec_synthesis.py  suite_miner.py  suite_pointer.py  types.py  validation.py
agi-orchestrator/scripts/: README.md  aggregate_scoreboards.py  capstone_ae_validation.sh  check_repo_policy.py  check_suite_integrity.py  check_suite_quality_gate.py  dev_bootstrap.sh  export_completion_bundle.py  export_completion_bundle.sh  generate_pyut_heldout_candidate_suite.py  mine_and_augment_pyut_dev_suite.py  preflight.py  run_orchestrator.py  smoke_orchestrator_e2e.sh  smoke_orchestrator_env_agent_e2e.sh  smoke_orchestrator_env_e2e.sh  smoke_orchestrator_env_hard_uplift.sh  smoke_orchestrator_io_e2e.sh  smoke_orchestrator_io_with_mock_llm.sh  (+11 more)
baremetal_lgp/: APF3_V3_IMPLEMENTATION_HANDOFF.md  Cargo.toml  OWNERS.md  PHASE1_THROUGHPUT_UNCORKING_AUDIT.md  PHASE2_RAWJIT_SUBSTRATE_ESCAPE_HANDOFF.md  PHASE3_IMPLEMENTATION_AUDIT.md  README.md  build.rs  watcher.sh
(+7891 files in other folders)
