[package]
name = "baremetal_lgp"
version = "0.1.0"
edition = "2021"

[lib]
name = "baremetal_lgp"
path = "src/lib.rs"

[features]
default = []
trace = ["dep:smallvec"]
jit = []
ast_call_counter = []

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossbeam-channel = "0.5.12"
getrandom = "0.2.15"
libc = "0.2.155"
parking_lot = "0.12.3"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
blake3 = "1.5.1"
bincode = "1.3.3"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
serde_json = "1.0.120"
smallvec = { version = "1.13.2", optional = true }

[dev-dependencies]
proptest = "1.5.0"

[build-dependencies]
cc = "1.0"
