[package]
name = "baremetal_lgp"
version = "0.1.0"
edition = "2021"

[lib]
name = "baremetal_lgp"
path = "src/lib.rs"

[features]
default = []
trace = ["dep:smallvec"]
jit = []
ast_call_counter = []

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossbeam-channel = "0.5.12"
getrandom = "0.2.15"
libc = "0.2.155"
parking_lot = "0.12.3"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
blake3 = "1.5.1"
bincode = "1.3.3"
thiserror = "1.0.63"
memmap2 = "0.9.4"
rand_chacha = "0.3.1"
rand = "0.8.5"
rand_core = "0.6.4"
serde_json = "1.0.120"
smallvec = { version = "1.13.2", optional = true }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde_yaml = "0.9.34"
sha2 = "0.10.9"
rayon = "1.10.0"

[dev-dependencies]
proptest = "1.5.0"
tempfile = "3.10.1"
loom = "0.7.2"

[build-dependencies]
cc = "1.0"
