[package]
name = "cdel_workmeter_rs_v1"
version = "0.1.0"
edition = "2021"

[lib]
name = "cdel_workmeter_rs_v1"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py38"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
